fix: remove broken css

--- a/client/src/components/NavBar/NavBar.module.scss
+++ b/client/src/components/NavBar/NavBar.module.scss
@@ -101,8 +101,3 @@
     left: 0;
   }
 }
-
-.downloadCV {
-  display: flex;
-  align-items: ;
-}
